Fixed bars gap

--- a/src/components/algorithms/bubble-sort/BubbleSort.module.css
+++ b/src/components/algorithms/bubble-sort/BubbleSort.module.css
@@ -14,12 +14,14 @@
 
 .bar {
   background-color: var(--color-primary-light);
-  /* width: 2rem;
-  height: 7rem; */
+  color: var(--color-black);
+  text-align: center;
+  font-size: 1rem;
 }
 
 .bars-ul {
   display: flex;
   list-style: none;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 0.3rem;
 }
